    - Change the way that Tor buffers data that it is waiting to write.
      Instead of queueing data cells in an enormous ring buffer for each
      client->OR or OR->OR connection, we now queue cells on a separate
      queue for each circuit.  This lets us use less slack memory, and
      will eventually let us be smarter about prioritizing different kinds
      of traffic.

  o Security fixes:
    - Directory authorities now call routers stable if they have an
      uptime of at least 30 days, even if that's not the median uptime
      in the network. Implements proposal 1xx, suggested by Kevin Bauer
      and Damon McCoy.

  o Major bugfixes:
    - Fix an infinite loop introduced in 0.1.2.7-alpha when we serve
      directory information requested inside Tor connections (i.e. via
      begin_dir cells). It only triggered when the same connection was
      serving other data at the same time. Reported by seeess.

  o Minor features (build):
    - Make autoconf search for libevent and openssl consistently.
    - Update deprecated macros in configure.in

  o Minor features (logging):
    - Always prepend "Bug: " to any log message about a bug.
    - Put a platform string (e.g. "Linux i686") in the startup log
      message, so when people paste just their logs, we know if it's
      openbsd or windows or what.

  o Minor features (other):
    - More unit tests.

  o Removed features:
    - Removed support for the old binary "version 0" controller protocol.
      This has been deprecated since 0.1.1, and warnings have been issued
      since 0.1.2.  When we encounter a v0 control message, we now send back
      an error and close the connection.
    - Remove the old "dns worker" server DNS code: it hasn't been default
      since 0.1.2.2-alpha, and all the servers seem to be using the new
      eventdns code.

  o Minor bugfixes (portability):
    - Even though windows is equally happy with / and \ as path separators,